[BTT] Fix z-index issue and added fill color control

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -297,7 +297,7 @@
 .ma-rpb-header {
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 999;
     width: 100%;
     background-color: #f1f1f1;
 }
@@ -356,7 +356,7 @@
     cursor: pointer;
     display: block;
     border-radius: 50px;
-    box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0 0 0 4px #D1CFCF;
     z-index: 10000;
     opacity: 0;
     visibility: hidden;
@@ -385,7 +385,7 @@
 }
 
 .ma-progress-wrap svg.progress-circle path {
-    stroke: #ff0040;
+    stroke: #7115FF;
     stroke-width: 4;
     box-sizing: border-box;
     -webkit-transition: all 200ms linear;
@@ -397,4 +397,4 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
